--- a/动态规划/鸡蛋掉落.md
+++ b/动态规划/鸡蛋掉落.md
@@ -18,8 +18,7 @@
 
 **max(dp[i - 1]\[x - 1], dp[i]\[j - x])的最小值，就是两个函数的相交之处！**但是这两个函数是离散的函数，但是也不影响，我们需要找到的就是离的最近的那两个点，如下图所示：
 
-![image2](https://github.com/Songnnn/CodeTop/blob/main/images/%E9%B8%A1%E8%9B%8B%E6%8E%89%E8%90%BD2.png)
-<img src="https://github.com/Songnnn/CodeTop/blob/main/images/%E9%B8%A1%E8%9B%8B%E6%8E%89%E8%90%BD2.png" width = "500" height = "500" alt="" align=center />
+<img src="https://github.com/Songnnn/CodeTop/blob/main/images/%E9%B8%A1%E8%9B%8B%E6%8E%89%E8%90%BD2.png" width = "50%" alt="" align=center />
 
 最小值就在这两个点中产生。
 
