--- a/链表/复制带随机指针的链表.md
+++ b/链表/复制带随机指针的链表.md
@@ -6,7 +6,7 @@
 
 本题有两种解法，迭代求解和递归求解，下面先介绍递归法。
 
-![image-20211224101417056](C:\Users\tcsns\AppData\Local\Programs\Typora\resources\Docs\刷题记录\images\复制带随机指针的链表.png)
+![image-20211224101417056](https://github.com/Songnnn/CodeTop/blob/main/images/复制带随机指针的链表.png)
 
 遍历整个链表，对当前节点：
 
@@ -47,7 +47,7 @@ q = head->next;
 head->next = q;
 ```
 
-![](C:\Users\tcsns\AppData\Local\Programs\Typora\resources\Docs\刷题记录\images\复制带随机指针的链表1.jpg)
+![](https://github.com/Songnnn/CodeTop/blob/main/images/复制带随机指针的链表1.jpg)
 
 这样就保存了新旧节点的对应关系，old->next = new，所以new->random = old->next->random，很顺理成章的，我们就复制了随机节点，最后一步只需要修改next指针，断开新旧链表的联系就行了。
 
