--- a/链表/环形链表.md
+++ b/链表/环形链表.md
@@ -20,7 +20,7 @@ public:
 ```
 重点是它的变种，如何找到环的开头。
 
-![image](C:\Users\tcsns\AppData\Local\Programs\Typora\resources\Docs\刷题记录\images\环形链表.png)
+![image](https://github.com/Songnnn/CodeTop/blob/main/images/环形链表.png)
 这题遇到好几次了，每次都又想不起来！
 
 首先设置快慢指针（速度是二比一），要记住一点，快慢指针第一次相遇的时候，
