--- a/动态规划/鸡蛋掉落.md
+++ b/动态规划/鸡蛋掉落.md
@@ -14,11 +14,11 @@
 
 “在第x楼丢鸡蛋，我们需要测试的次数为1 + **max**(dp[i - 1]\[x - 1], dp[i]\[j - x])。对于所有可能的x，我们取它们的**最小值**”。对于dp[i -1]\[x - 1]来说，毫无疑问，它是关于x的单调递增函数，而对于dp[i]\[j - x]来说，它是关于x的单调递减函数。如果这两个函数是连续的，如下图所示：
 
-![image-20220103133902596](https://github.com/Songnnn/CodeTop/blob/main/images/鸡蛋掉落1.png){:height="50%" width="50%"}
+![image-20220103133902596](https://github.com/Songnnn/CodeTop/blob/main/images/鸡蛋掉落1.png)
 
 **max(dp[i - 1]\[x - 1], dp[i]\[j - x])的最小值，就是两个函数的相交之处！**但是这两个函数是离散的函数，但是也不影响，我们需要找到的就是离的最近的那两个点，如下图所示：
 
-![image-1](https://github.com/Songnnn/CodeTop/blob/main/images/鸡蛋掉落2.png)
+<img src="https://github.com/Songnnn/CodeTop/blob/main/images/鸡蛋掉落2.png" width = 50%"
 
 最小值就在这两个点中产生。
 
