--- a/动态规划/鸡蛋掉落.md
+++ b/动态规划/鸡蛋掉落.md
@@ -18,7 +18,7 @@
 
 **max(dp[i - 1]\[x - 1], dp[i]\[j - x])的最小值，就是两个函数的相交之处！**但是这两个函数是离散的函数，但是也不影响，我们需要找到的就是离的最近的那两个点，如下图所示：
 
-<img src="https://github.com/Songnnn/CodeTop/blob/main/images/鸡蛋掉落2.png" width = 50%"
+<img src="https://github.com/Songnnn/CodeTop/blob/main/images/鸡蛋掉落2.png" width = 50%">
 
 最小值就在这两个点中产生。
 
