--- a/二分/接雨水.md
+++ b/二分/接雨水.md
@@ -2,7 +2,7 @@
 
 如图所示：
 
-![image-20211228154211177](C:\Users\tcsns\AppData\Local\Programs\Typora\resources\Docs\刷题记录\images\接雨水.png)
+![image-20211228154211177](https://github.com/Songnnn/CodeTop/blob/main/images/接雨水.png)
 
 整个柱子数组的变化有四种情况：
 
