--- a/二分/寻找两个有序数组的中位数.md
+++ b/二分/寻找两个有序数组的中位数.md
@@ -2,7 +2,7 @@
 
 这题也叫做求解两个数组中第k小的数，类似归并的方法就不说了，时间复杂度是$O(m+n)$，没有任何难度。
 
-接下来介绍二分查找法，时间复杂度可以降到$O(long(m+n))$。类似归并的方法是两个指针首先分别指向数组的开头，随后比较大小，然后依次前进，这样的方法一次比较只能前进一次，所以时间复杂度是$O(m+n)$。但由于数组是有序的，所以我们完全可以每次都排除掉k/2个数，假设我们要找第7小的数字，如下图：![image-20211214212440415](C:\Users\tcsns\AppData\Local\Programs\Typora\resources\Docs\刷题记录\images\寻找两个有序数组的中位数1.png)
+接下来介绍二分查找法，时间复杂度可以降到$O(long(m+n))$。类似归并的方法是两个指针首先分别指向数组的开头，随后比较大小，然后依次前进，这样的方法一次比较只能前进一次，所以时间复杂度是$O(m+n)$。但由于数组是有序的，所以我们完全可以每次都排除掉k/2个数，假设我们要找第7小的数字，如下图：![image-20211214212440415](https://github.com/Songnnn/CodeTop/blob/main/images/寻找两个有序数组的中位数1.png)
 
 我们比较两个数组的第 k/2 个数字，如果 k 是奇数，向下取整。也就是比较第3个数字，上边数组中的4和下边数组中的3，**如果哪个小，就表明该数组的前 k/2 个数字都不是第 k 小数字，而是前k-1个数中的一部分**，所以可以排除。也就是1，2，3这三个数字不可能是第 7小的数字，我们可以把它排除掉。将1349和45678910两个数组作为新的数组进行比较。
 
