--- a/朴实无华or旁门左道/字符串相乘.md
+++ b/朴实无华or旁门左道/字符串相乘.md
@@ -48,7 +48,7 @@ public:
 
 其实可以利用乘法算式的规律进行优化。对于位数为m的nums1，位数为n的nums2，二者相乘的结果res，最大位数为m+n，nums[i]*nums[j]的结果为temp，位数最多为2位，temp[0] = res[i+j]，temp[1] = res[i+j+1]，示例图如下：
 
-![image-20211216160911906](C:\Users\tcsns\AppData\Local\Programs\Typora\resources\Docs\刷题记录\images\字符串相乘.png)
+![image-20211216160911906](https://github.com/Songnnn/CodeTop/blob/main/images/字符串相乘.png)
 
 时间复杂度也是$O(m*n)$，代码如下（java）：
 
