--- a/栈/最小栈.md
+++ b/栈/最小栈.md
@@ -94,5 +94,5 @@ public:
 
 图解：
 
-![image-20211223185156923](C:\Users\tcsns\AppData\Local\Programs\Typora\resources\Docs\刷题记录\images\最小栈.png)
+![image-20211223185156923](https://github.com/Songnnn/CodeTop/blob/main/images/最小栈.png)
 
