--- a/回溯/解数独.md
+++ b/回溯/解数独.md
@@ -2,7 +2,7 @@
 
 我只能想到回溯的方法，但是回溯的方法很有可能会超时。动态规划的方法也不行，子问题的最优解并不是最终问题的最优解。
 
-官方题解正是用的回溯，回溯的时间复杂度为O(9^(9*9))，我想多了，这题只是9*9的格子罢了，时间复杂度其实很小。而且不同的题目有不同的时间复杂宽容度，很明显，这题只能用回溯，有时候还是别想太多。
+官方题解正是用的回溯，回溯的时间复杂度为O(9^(9*/9))，我想多了，这题只是9*9的格子罢了，时间复杂度其实很小。而且不同的题目有不同的时间复杂宽容度，很明显，这题只能用回溯，有时候还是别想太多。
 
 这题要做出来不难，但是代码要思路清晰且优雅就难了，关键是用什么数据结构来表达。
 
