--- a/链表/反转链表.md
+++ b/链表/反转链表.md
@@ -26,7 +26,7 @@ public:
     }
 };
 ```
-思路三：递归，很巧妙，代码如下（java版本）：
+思路三：递归，很巧妙，代码如下：
 ```java
 class Solution {
     public ListNode reverseList(ListNode head) {
@@ -34,14 +34,23 @@ class Solution {
             return head;
         }
         ListNode p = reverseList(head.next);
-        head.next.next = head;
+        head.next.next = head; //这一步非常精髓
         head.next = null;
         return p;
     }
 }
 ```
-reverseList(head)得到的是以head为链尾的已经反转好了的链表的头， 在函数中，head->next被
-
-传入reverseList函数中，返回的是以head->next为链表尾部的链表的头，此时的head是最后一个需
-
-要被反转的节点
+reverseList(head)得到的是以head为链尾的已经反转好了的链表的头，head.next.next = head非常精髓，有了这步才能返回翻转链表的头，如果要返回翻转链表的尾的话，代码如下：
+```java
+class Solution {
+    public ListNode reverseList(ListNode head) {
+        if (head == null || head.next == null) {
+            return head;
+        }
+        ListNode p = reverseList(head.next);
+        p.next = head;
+        head.next = null;
+        return head;
+    }
+}
+```
