--- a/队列/数据流的中位数.md
+++ b/队列/数据流的中位数.md
@@ -78,7 +78,7 @@ public:
 
 其实我没必要维护一个有序的序列，我只需要得到中位数就行了。最优解是使用两个堆，一个大顶堆，一个小顶堆，这样我们可以很好地维护中位数，如图所示：
 
-![image-20220210193557815](C:\Users\hp\Desktop\数据流的中位数.png)
+![image-20220210193557815](https://github.com/Songnnn/CodeTop/blob/main/images/%E6%95%B0%E6%8D%AE%E6%B5%81%E7%9A%84%E4%B8%AD%E4%BD%8D%E6%95%B0.png)
 
 堆用优先队列来实现，其底层本来就是堆。left queue是大顶堆，存放小于或等于当前中位数的数字；right queue是小顶堆，存放大于当前中位数的数字，left queue中元素的数量要始终比right queue多一个。
 
