--- a/动态规划/最大子序和.md
+++ b/动态规划/最大子序和.md
@@ -7,13 +7,16 @@
 class Solution {
 public:
     int maxSubArray(vector<int>& nums) {
-        int pre = 0, maxAns = nums[0];
-        for (const auto &x: nums) {
-            pre = max(pre + x, x);
-            maxAns = max(maxAns, pre);
+        //dp[i]表示以nums[i]为结尾的最大子序和，严格
+        int size = nums.size();
+        vector<int> dp(size);
+        dp[0] = nums[0];
+        int res = nums[0];
+        for(int i = 1; i < size; i++) {
+            dp[i] = max(dp[i - 1] + nums[i], nums[i]);
+            res = max(res, dp[i]);
         }
-        return maxAns;
+        return res;
     }
 };
-
 ```
