--- a/动态规划/最大子序和.md
+++ b/动态规划/最大子序和.md
@@ -3,11 +3,11 @@
 一开始我想的是用前缀和的方法来做，但是不太好确定当前的最大值。其实动态规划的方法也有点前缀和的思想，dp\[i]表示以nums\[i]为结尾的最大子序和。对于我们正常的思路来说，我们总是开始以i为开头怎么怎么样，但是其实对于动态规划的方法来说，以i为结尾才是正常的思路，这样表示我们已经获得了之前的最优解，这样就能产生递推关系
 ![image](https://github.com/Songnnn/CodeTop/blob/main/images/最大子序和.png)
 
+可以用dp的思想做，dp[i]表示严格以nums[i]为结尾的最大子序和。
 ```c++
 class Solution {
 public:
     int maxSubArray(vector<int>& nums) {
-        //dp[i]表示以nums[i]为结尾的最大子序和，严格
         int size = nums.size();
         vector<int> dp(size);
         dp[0] = nums[0];
@@ -16,6 +16,26 @@ public:
             dp[i] = max(dp[i - 1] + nums[i], nums[i]);
             res = max(res, dp[i]);
         }
+        return res;
+    }
+};
+```
+
+也可以直接用前缀和，在遍历的过程中，维护一个之前的最小前缀和，代码如下：
+```c++
+class Solution {
+public:
+    int maxSubArray(vector<int>& nums) {
+        int size = nums.size();
+        vector<int> sum(size + 1);
+        for(int i = 0; i < size; i++) sum[i + 1] = nums[i] + sum[i];
+        
+        int res = sum[1];
+        int min_sum = 0;
+        for(int i = 1; i < size + 1; i++) {
+            res = max(sum[i] - min_sum, res);
+            min_sum = min(min_sum, sum[i]);
+        } 
         return res;
     }
 };
