--- a/动态规划/最大子序和.md
+++ b/动态规划/最大子序和.md
@@ -1,6 +1,6 @@
 题源：https://leetcode-cn.com/problems/maximum-subarray/
 
-一开始我想的是用前缀和的方法来做，但是不太好确定当前的最大值。其实动态规划的方法也有点前缀和的思想，dp\[i]表示以nums\[i]为结尾的最大子序和。对于我们正常的思路来说，我们总是开始以i为开头怎么怎么样，但是其实对于动态规划的方法来说，以i为结尾才是正常的思路，这样表示我们已经获得了之前的最优解，这样就能产生递推关系
+动态规划思路讲解：
 ![image](https://github.com/Songnnn/CodeTop/blob/main/images/最大子序和.png)
 
 可以用dp的思想做，dp[i]表示严格以nums[i]为结尾的最大子序和。
