--- a/动态规划/最大子序和.md
+++ b/动态规划/最大子序和.md
@@ -4,7 +4,7 @@
 
 ![image](https://github.com/Songnnn/CodeTop/blob/main/images/最大子序和.png)
 
-可以用dp的思想做，dp[i]表示严格以nums[i]为结尾的最大子序和。
+这题可以用dp的思想做，dp[i]表示严格以nums[i]为结尾的最大子序和。
 ```c++
 class Solution {
 public:
