--- a/动态规划/零钱兑换.md
+++ b/动态规划/零钱兑换.md
@@ -1,77 +1,51 @@
-题源：https://leetcode-cn.com/problems/coin-change/
+题源：https://leetcode-cn.com/problems/coin-change-2/
 
-使用动态规划的思路来做，dp[i,j]表示用coins[0,i]凑成j的最少硬币个数。如果没有方案则返回-1，但是当amount为0时，方案数是0。
-
-dp[i]\[j]的值为：
-
-- 当coins[i] > j时，无法拿取该硬币，dp[i]\[j] = dp[i-1]\[j]
-- 当coins[i] <= j时，可以拿该硬币，**而且数量不限**
-  - 如果数量有限，只能取1个的话，那dp[i]\[j] = 1 + dp[i - 1]\[j - coins[i]]
-  - 本题数量不限，所以是dp[i]\[j] = 1 + dp[**i**]\[j - coins[i]]。
-  - 最开始会很奇怪，**为什么不是dp[i]\[j] = 1 + dp[i - 1]\[j - coins[i]]**。下面解释一下，j是从0到amount遍历的，**当j第一次大于coins[i]时**，此时的j - coins[i]肯定小于j，所以就dp[i]\[j - coins[i]]的值就按无法拿取该硬币的情况计算，即dp[i]\[j - coins[i]] **=** 1 + dp[i]\[j - coins[i]] **=** 1 + dp[i-1]\[j - coins[i]]，这个是很好理解的，表示用前i-1个硬币来凑j-coins[i]；但是**当j再次大于coins[i]时**，由于之前已经**拿过了**一次coins[i]，所以dp[i]\[j]必须等于1 + dp[**i**]\[j - coins[i]]，表示用前i个硬币来凑j-coins[i]（已经拿了coins[i]）。
-
-这题耗费了我不少时间，其实并不难，但是关于边界的判定需要仔细思考。
-
-首先第一列肯定要是0，即dp[i..n]\[0] = 0。那第一行该如何初始化呢？即只用第一枚硬币，凑成j的方案数。最开始我想的是，如果能整除，那刚好就取整，不能那就初始化为-1，即表示没有方案：
-
-```c++
-for(int i = 1; i < amount + 1; i++) {
-            if(i % coins[0] == 0) dp[0][i] = i / coins[0];
-            else dp[0][i] = -1;
-        }
-```
-
-但是，dp[i,j]表示的是coins[0,i]凑成j的最少硬币个数，后面是需要进行**最小值比较**的，对于coins = [3,5]，amount = 5，我拿一枚5毛硬币刚好凑成5毛，硬币数是1，但是我不拿5毛硬币的方案数是-1，**它要比1更小**，此时反而选中-1，即没有方案，这时就出现了问题。正确的方法是如果没有方案，就将其初始化为一个很大的值，让其在比小的时候不可能被选中。
-
-代码如下：
+经典背包问题，dp[i]\[j]表示用coins[0]到coins[i]凑成j的方案数，代码如下：
 
 ```c++
 class Solution {
 public:
-    int coinChange(vector<int>& coins, int amount) {
+    int change(int amount, vector<int>& coins) {
         int size = coins.size();
         vector<vector<int>> dp(size, vector<int>(amount + 1));
-        //第一列都是0
-        for(int i = 0; i < size; i++) dp[i][0] = 0;
         //初始化第一行
-        for(int i = 1; i < amount + 1; i++) {
-            if(i % coins[0] == 0) dp[0][i] = i / coins[0];
-            else dp[0][i] = amount + 1;
+        for(int j = 1; j < amount + 1; j++) {
+            if(j % coins[0] == 0) dp[0][j] = 1;
         }
-
+        //初始化第一列，要注意，令coins[0..i]凑成0的方案为一种
+        for(int i = 0; i < size; i++) dp[i][0] = 1;            
+        
         for(int i = 1; i < size; i++) {
             for(int j = 1; j < amount + 1; j++) {
-                dp[i][j] = dp[i -1][j]; //不拿该硬币，有可能有方案，也有可能没方案
-                if(coins[i] <= j) {
-                    //可以拿这枚硬币
-                    dp[i][j] = min(dp[i][j], 1 + dp[i][j - coins[i]]);
-                }
+                dp[i][j] = dp[i - 1][j]; //不拿coins[i]
+                if(coins[i] <= j) dp[i][j] += dp[i][j - coins[i]];
             }
         }
-
-        return dp[coins.size() - 1][amount] == (amount + 1)?-1:dp[coins.size() - 1][amount];
+        return dp[size - 1][amount];
     }
 };
 ```
 
-二维动态规划一般都可以缩小到一维，dp[i]表示amount为i时的最小方案，代码如下：
+精简一下，代码如下：
 
 ```c++
 class Solution {
 public:
-    int coinChange(vector<int>& coins, int amount) {
-        //dp[i]表示amount为i时的最小方案
-        int Max = amount + 1;
-        vector<int> dp(amount + 1, Max);
-        dp[0] = 0;
-        for (int i = 1; i <= amount; ++i) {
-            for (int j = 0; j < (int)coins.size(); ++j) { //遍历所有硬币
-                if (coins[j] <= i) {
-                    dp[i] = min(dp[i], dp[i - coins[j]] + 1);
-                }
+    int change(int amount, vector<int>& coins) {
+        int size = coins.size();
+        vector<int> dp(amount + 1);
+        dp[0] = 1;
+        //初始化第一行
+        for(int j = 1; j < amount + 1; j++) {
+            if(j % coins[0] == 0) dp[j] = 1;
+        }
+            
+        for(int i = 1; i < size; i++) {
+            for(int j = 1; j < amount + 1; j++) {
+                if(coins[i] <= j) dp[j] += dp[j - coins[i]];
             }
         }
-        return dp[amount] > amount ? -1 : dp[amount];
+        return dp[amount];
     }
 };
 ```
