--- a/二分/总结.md
+++ b/二分/总结.md
@@ -1,1 +1,21 @@
+二分法的前提是有序，关键步骤如下：
 
+```c++
+while(left <= right) {
+    int mid = left + (right - left) / 2;
+    if(nums[mid] > target) right = mid - 1;
+    else if(nums[mid] < target) left = mid + 1;
+    else if(nums[mid] == target) return mid;
+}
+```
+
+在二分的过程中，如果nums[left]到nums[right]的数量大于等于三，那mid取中间即可，会有两种稍微特殊一点的情况需要记住：
+
+- left = right时，mid = left
+- left = right - 1时，mid = left
+
+如果最终能够找到target那么圆满返回。如果target不存在，那么会有三种情况，假设数组升序：
+
+- target小于数组的最小值，那么最终right = -1，left = right + 1，跳出循环
+- target大于数组的最大值，那么最终left = size，left = right + 1，跳出循环
+- target在数组大小范围内，但只是不存在而已，那么left = right + 1，跳出循环
