--- a/双指针/三数之和.md
+++ b/双指针/三数之和.md
@@ -12,9 +12,9 @@
 
 在固定好nums[i]之后，令三数之和等于s：
 
-- when s < 0，i += 1并跳过所有重复的nums[i]
-- when s > 0, j -= 1并跳过所有重复的nums[j]
-- when s == 0, 记录下此时的结果，执行i += 1和j -= 1并跳过所有重复的结果
+- when s < 0，left++
+- when s > 0, right--
+- when s == 0, 记录下此时的结果，执行left += 1和right -= 1并跳过所有重复的结果
 
 时间复杂度为$O(n^2)$，关键亮点是去重，代码如下：
 
