--- a/双指针/删除有序数组中的重复项.md
+++ b/双指针/删除有序数组中的重复项.md
@@ -9,7 +9,10 @@ public:
         int size = nums.size();
         if(size == 0) return 0;
         for(auto it = nums.begin(); it + 1 != nums.end();) {
-            if(*it == *(it + 1)) nums.erase(it);
+            if(*it == *(it + 1)) {
+                auto new_it = nums.erase(it); //erase()会返回下一个元素的迭代器，原来的it会指向未知的地方
+                it = new_it;
+            }
             else it++;
         }
         return nums.size();
